--- a/modules/boletim-web/build.gradle
+++ b/modules/boletim-web/build.gradle
@@ -1,21 +1,18 @@
 dependencies {
-    compileOnly group: "com.liferay.portal", name: "release.portal.api"
+	// Boletim service.
+	// Clay taglib.
+	// Necessário para Management Toolbar.
 
-    // Clay taglib.
-    compileOnly group: 'com.liferay', name: 'com.liferay.frontend.taglib.clay'
+	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.clay"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.function"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
+	compileOnly group: "com.liferay.portal", name: "release.portal.api"
+	compileOnly group: "javax.portlet", name: "portlet-api"
+	compileOnly group: "javax.servlet", name: "javax.servlet-api"
+	compileOnly group: "jstl", name: "jstl"
+	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
+	compileOnly project(":modules:boletim:boletim-api")
 
-    // Necessário para Management Toolbar.
-    compileOnly group: 'com.liferay', name: 'com.liferay.petra.function'
-    compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
-    compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
-    compileOnly group: "javax.portlet", name: "portlet-api"
-    compileOnly group: "javax.servlet", name: "javax.servlet-api"
-    compileOnly group: "jstl", name: "jstl"
-    compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
-
-    // Boletim service.
-    compileOnly project(":modules:boletim:boletim-api")
-
-    cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.1.3"
+	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.1.3"
 }
-
