--- a/modules/boletim-web/build.gradle
+++ b/modules/boletim-web/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.petra.function"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
+	// https://mvnrepository.com/artifact/com.liferay/com.liferay.frontend.taglib
+	compileOnly group: 'com.liferay', name: 'com.liferay.frontend.taglib', version: '12.3.4'
 	compileOnly group: "com.liferay.portal", name: "release.portal.api"
 	compileOnly group: "javax.portlet", name: "portlet-api"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api"
